cabal-version: 3.0
name:          crypto-srp
version:       0.1.0.0
synopsis:      SRP authentication primitives
description:
  A library providing primitives for the
  [Secure Remote Password (SRP)](https://datatracker.ietf.org/doc/html/rfc5054) protocol.

  It includes the core SRP computation — public key exchange, premaster secret
  derivation, client\/server proof generation and verification — along with the
  standard prime groups from RFC 5054 Appendix A, a hash algorithm abstraction
  covering SHA1, SHA256, SHA384 and SHA512, and cryptographically random
  private key generation.

license:       BSD-3-Clause
license-file:  LICENSE
author:        Tim Emiola
maintainer:    adetokunbo@emio.la
category:      Cryptography
extra-doc-files:
  README.md
  ChangeLog.md

library
  exposed-modules:  Crypto.SRP
                    Crypto.SRP.Constants
                    Crypto.SRP.Hashing
                    Crypto.SRP.PrimeGroup
                    Crypto.SRP.Random
  hs-source-dirs:   src
  build-depends:
      base                 >= 4.12 && < 5
    , bytestring           >=0.10.8 && <0.11 || >=0.11.3 && <0.13
    , cryptohash-sha1      >= 0.11 && < 0.12
    , cryptohash-sha256    >= 0.11 && < 0.12
    , cryptohash-sha512    >= 0.11 && < 0.12
    , entropy              >= 0.3.7 && < 0.5
    , fmt                  >= 0.6.3 && < 0.8
    , text                 >= 1.2.3 && < 2.2
    , unicode-transforms   >= 0.3 && < 0.5
  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-uni-patterns -Wpartial-fields -fwarn-tabs

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:    Crypto.SRPSpec
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  build-depends:
      base
    , bytestring
    , crypto-srp
    , fmt
    , hspec       >= 2.1 && < 3.0
    , QuickCheck  >= 2.13 && < 2.16
